--- a/account.html
+++ b/account.html
@@ -1,49 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
-
     <title>My Account</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+<header>
+    <h1>Welcome, User</h1>
 
-    <header>
+    <nav>
+        <a href="#">Order History</a> |
+        <a href="#">Profile</a> |
+        <a href="#">Wishlist</a>
+    </nav>
+</header>
 
-        <h1>Welcome, User</h1>
+<main>
 
-        <nav>
+    <h2>Previous Purchases</h2>
 
-            <a href="#">Order History</a> |
-            <a href="#">Profile</a> |
-            <a href="#">Wishlist</a>
+    <ul class="order-history">
+        <li>Pink Summer Dress – <span class="price">799</span></li>
+        <li>Floral Skirt – <span class="price">599</span></li>
+    </ul>
 
-        </nav>
-
-    </header>
-
-
-
-    <main>
-
-        <h2>Previous Purchases</h2>
-
-        <details>
-
-            <summary>Order #001</summary>
-
-            <p>Pink Summer Dress - ₱799</p>
-
-        </details>
-
-    </main>
-
-
+</main>
 
 </body>
-
 </html>
