--- a/singup.html
+++ b/singup.html
@@ -1,47 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
-
     <title>Sign Up</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+<header>
+    <h1>Create Account</h1>
+</header>
 
-    <header>
+<main>
 
-        <h1>Create Account</h1>
+    <form action="account.html" method="get">
 
-    </header>
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required>
 
+        <br><br>
 
+        <label for="password">Password:</label><br>
+        <input type="password" id="password" name="password" required>
 
-    <main>
+        <br><br>
 
-        <form action="account.html" method="get">
+        <button type="submit">Create Account</button>
 
-            <label for="email">Email:</label><br>
-            <input type="email" id="email" required>
+    </form>
 
-            <br><br>
-
-            <label for="password">Password:</label><br>
-            <input type="password" id="password" required>
-
-            <br><br>
-
-            <button type="submit">Create Account</button>
-
-        </form>
-
-    </main>
-
-
+</main>
 
 </body>
-
 </html>
